--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,26 +12,26 @@ android {
         versionName "1.0"
     }
 
-    signingConfigs {
-        release {
-            // default keystore file, PLZ config file path in local.properties
-            Properties properties = new Properties()
-            //加载本地local.properties文件
-            if(rootProject.file("local.properties").exists()) {
-                properties.load(rootProject.file("local.properties").newDataInputStream())
-            }
-            storeFile file(properties.get("storeFile") ?: System.getenv("FLOW_CERTIFICATE_FILE"))
-            storePassword properties.get("storePassword") ?: System.getenv("FLOW_KEYSTORE_PASS")
-            keyAlias properties.get("keyAlias") ?: System.getenv("FLOW_ALIAS_NAME")
-            keyPassword properties.get("keyPassword") ?: System.getenv("FLOW_ALIAS_PASS")
-        }
-    }
+//    signingConfigs {
+//        release {
+//            // default keystore file, PLZ config file path in local.properties
+//            Properties properties = new Properties()
+//            //加载本地local.properties文件
+//            if(rootProject.file("local.properties").exists()) {
+//                properties.load(rootProject.file("local.properties").newDataInputStream())
+//            }
+//            storeFile file(properties.get("storeFile") ?: System.getenv("FLOW_CERTIFICATE_FILE"))
+//            storePassword properties.get("storePassword") ?: System.getenv("FLOW_KEYSTORE_PASS")
+//            keyAlias properties.get("keyAlias") ?: System.getenv("FLOW_ALIAS_NAME")
+//            keyPassword properties.get("keyPassword") ?: System.getenv("FLOW_ALIAS_PASS")
+//        }
+//    }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.release
+//            signingConfig signingConfigs.release
         }
     }
 }
